tramite edit ajax

--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -1,2 +1,44 @@
-Información: __Información
+Información: Información
 messages.ziurzaude: '¿estas seguro?'
+Taula Laguntzaileak: 'Tablas auxiliares'
+Kanalak: Canales
+Tramiteen emaitza motak: 'Tipos de resultados de tramites'
+Tramiteen motak: 'Tipos de tramite'
+Kanala: Canal
+Remitente: Remitente
+Persona individual: 'Persona Individual'
+Administración / Empresa: 'Administración / Empresa'
+Genero: Genero
+Femenino: Femenino
+Masculino: Masculino
+Adina: Edad
+Hasta 30: 'Hasta 30'
+31-65: '31-65'
+Mayor 65: 'Mayor 65'
+Nazionalitatea: 'Nacionalidad'
+Hizkuntza: Idioma
+Euskera: Euskera
+Castellano: Castellano
+Otra: Otra
+Barrutia: Distrito
+Donibane: Donibane
+Trintxerpe: Trintxerpe
+Antxo: 	Antxo
+San Juan: 'San Juan'
+Administrazioa: Administración
+Municipal: Municipal
+Provincial: Provincial
+Autonomica: Autonómica
+Estatal: Estatal
+Justicia: Justicia
+Osakidetza: Osakidetza
+User: Usuario
+Fetxa: Fecha
+Nan: Dni
+Oharra: Notas
+Name: Nombre
+Kodea: Código
+Result: Resultado
+Notes: Notas
+Arreta: Atención
+Mota: Tipo
