--- a/app/Resources/translations/messages.eu.yml
+++ b/app/Resources/translations/messages.eu.yml
@@ -1,2 +1,44 @@
-Información: __Información
+Información: Informazioa
 messages.ziurzaude: 'Ziur zaude?'
+Taula Laguntzaileak: 'Taula Laguntzaileak'
+Kanalak: Kanalak
+Tramiteen emaitza motak: 'Tramiteen emaitza motak'
+Tramiteen motak: 'Tramiteen motak'
+Kanala: Kanala
+Remitente: Remitentea
+Persona individual: 'Bakarkakoa'
+Administración / Empresa: 'Administrazioa / Enpresa'
+Genero: Generoa
+Femenino: Emakumezkoa
+Masculino: Gizonezkoa
+Adina: Adina
+Hasta 30: '30erarte'
+31-65: '31-65'
+Mayor 65: '65etik aurrera'
+Nazionalitatea: 'Nazionalitatea'
+Hizkuntza: Hizkuntza
+Euskera: Euskera
+Castellano: Gaztelania
+Otra: 'Beste bat'
+Barrutia: Barrutia
+Donibane: Donibane
+Trintxerpe: Trintxerpe
+Antxo: 	Antxo
+San Juan: 'San Juan'
+Administrazioa: Administrazioa
+Municipal: Udalerria
+Provincial: Probintzial
+Autonomica: Autonomikoa
+Estatal: Estatala
+Justicia: Justizia
+Osakidetza: Osakidetza
+User: Erabiltzailea
+Fetxa: Data
+Nan: Nan
+Oharra: Oharra
+Name: Izena
+Kodea: Kodea
+Result: Emaitza
+Notes: Oharrak
+Arreta: Arreta
+Mota: Mota
