Arreta bat gorde eta Gorde+Itxi botoiak

--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -62,3 +62,6 @@ Tramiteak: Trámites
 'Arreta berria': 'Nueva atención'
 Aldatu: 'Modificar'
 Ezabatu: 'Eliminar'
+Arreta Gorde: 'Guardar Atención'
+Arreta Itxi: 'Guardar y cerrar Atención'
+Arreta Ezabatu: 'Eliminar Atención'
