--- a/app/Resources/translations/messages.eu.yml
+++ b/app/Resources/translations/messages.eu.yml
@@ -62,3 +62,6 @@ Tramiteak: Tramiteak
 'Arreta berria': 'Arreta berria'
 Aldatu: 'Aldatu'
 Ezabatu: 'Ezabatu'
+Arreta Gorde: 'Arreta gorde'
+Arreta Itxi: 'Arreta itxi eta gorde'
+Arreta Ezabatu: 'Arreta ezabatu'
