Kokalekua gehitu. Ordena aldatu

--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -65,3 +65,5 @@ Ezabatu: 'Eliminar'
 Arreta Gorde: 'Guardar Atención'
 Arreta Itxi: 'Guardar y cerrar Atención'
 Arreta Ezabatu: 'Eliminar Atención'
+Langilea: 'Trabajador/a'
+Kokalekua: 'Localización'
