--- a/app/Resources/translations/messages.eu.yml
+++ b/app/Resources/translations/messages.eu.yml
@@ -65,3 +65,5 @@ Ezabatu: 'Ezabatu'
 Arreta Gorde: 'Arreta gorde'
 Arreta Itxi: 'Arreta itxi eta gorde'
 Arreta Ezabatu: 'Arreta ezabatu'
+Langilea: 'Langilea'
+Kokalekua: 'Kokalekua'
