--- a/app/Resources/translations/messages.eu.yml
+++ b/app/Resources/translations/messages.eu.yml
@@ -67,3 +67,7 @@ Arreta Itxi: 'Arreta itxi eta gorde'
 Arreta Ezabatu: 'Arreta ezabatu'
 Langilea: 'Langilea'
 Kokalekua: 'Kokalekua'
+Zure arretak guztira: 'Zure arretak guztira'
+Zure gaurko arretak: 'Zure gaurko arretak'
+Arretak guztira: 'Arretak guztira'
+Gaurko arretak: 'Gaurko arretak'
