--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -67,7 +67,7 @@ Arreta Itxi: 'Guardar y cerrar Atención'
 Arreta Ezabatu: 'Eliminar Atención'
 Langilea: 'Trabajador/a'
 Kokalekua: 'Localización'
-Zure arretak guztira: 'Tu total atenciones'
-Zure gaurko arretak: 'Tu total de atenciones hoy'
+Zure arretak guztira: 'Tus atenciones'
+Zure gaurko arretak: 'Tus atenciones de hoy'
 Arretak guztira: 'Total atenciones'
 Gaurko arretak: 'Total atenciones hoy'
