SQL sentziak gutxitu

--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -60,14 +60,15 @@ Itxita: Cerrado
 Data: Fecha
 Tramiteak: Trámites
 'Arreta berria': 'Nueva atención'
-Aldatu: 'Modificar'
-Ezabatu: 'Eliminar'
-Arreta Gorde: 'Guardar Atención'
-Arreta Itxi: 'Guardar y cerrar Atención'
-Arreta Ezabatu: 'Eliminar Atención'
-Langilea: 'Trabajador/a'
-Kokalekua: 'Localización'
-Zure arretak guztira: 'Tus atenciones'
-Zure gaurko arretak: 'Tus atenciones de hoy'
-Arretak guztira: 'Total atenciones'
-Gaurko arretak: 'Total atenciones hoy'
+Aldatu: Modificar
+Ezabatu: Eliminar
+'Arreta Gorde': 'Guardar Atención'
+'Arreta Itxi': 'Guardar y cerrar Atención'
+'Arreta Ezabatu': 'Eliminar Atención'
+Langilea: Trabajador/a
+Kokalekua: Localización
+'Zure arretak guztira': 'Tus atenciones'
+'Zure gaurko arretak': 'Tus atenciones de hoy'
+'Arretak guztira': 'Total atenciones'
+'Gaurko arretak': 'Total atenciones hoy'
+'HAZ/SAC gaur': 'HAZ/SAC hoy'
