--- a/app/Resources/translations/messages.eu.yml
+++ b/app/Resources/translations/messages.eu.yml
@@ -60,14 +60,16 @@ Itxita: Itxita
 Data: Data
 Tramiteak: Tramiteak
 'Arreta berria': 'Arreta berria'
-Aldatu: 'Aldatu'
-Ezabatu: 'Ezabatu'
-Arreta Gorde: 'Arreta gorde'
-Arreta Itxi: 'Arreta itxi eta gorde'
-Arreta Ezabatu: 'Arreta ezabatu'
-Langilea: 'Langilea'
-Kokalekua: 'Kokalekua'
-Zure arretak guztira: 'Zure arretak guztira'
-Zure gaurko arretak: 'Zure gaurko arretak'
-Arretak guztira: 'Arretak guztira'
-Gaurko arretak: 'Gaurko arretak'
+Aldatu: Aldatu
+Ezabatu: Ezabatu
+'Arreta Gorde': 'Arreta gorde'
+'Arreta Itxi': 'Arreta itxi eta gorde'
+'Arreta Ezabatu': 'Arreta ezabatu'
+Langilea: Langilea
+Kokalekua: Kokalekua
+'Zure arretak guztira': 'Zure arretak guztira'
+'Zure gaurko arretak': 'Zure gaurko arretak'
+'Arretak guztira': 'Arretak guztira'
+'Gaurko arretak': 'Gaurko arretak'
+'HAZ/SAC gaur': '__HAZ/SAC gaur'
+
