Datatables ok. Admin bada denak, user bidezko filtro falta.

--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -72,3 +72,7 @@ Kokalekua: Localización
 'Arretak guztira': 'Total atenciones'
 'Gaurko arretak': 'Total atenciones hoy'
 'HAZ/SAC gaur': 'HAZ/SAC hoy'
+Arreta ezabatu: 'Eliminar atención'
+Arretako xehetasunak aldatu: 'Modificar atención'
+Ziur zaude?: '¿Estas seguro?'
+Ezabatu aukeratutako Arretak: 'Eliminar las atenciones seleccionadas'
