--- a/app/Resources/translations/messages.eu.yml
+++ b/app/Resources/translations/messages.eu.yml
@@ -72,4 +72,8 @@ Kokalekua: Kokalekua
 'Arretak guztira': 'Arretak guztira'
 'Gaurko arretak': 'Gaurko arretak'
 'HAZ/SAC gaur': '__HAZ/SAC gaur'
+Arreta ezabatu: 'Arreta ezabatu'
+Arretako xehetasunak aldatu: 'Arretako xehetasunak aldatu'
+Ziur zaude?: 'Ziur zaude?'
+Ezabatu aukeratutako Arretak: 'Ezabatu aukeratutako Arretak'
 
