Dorlet ezabatu. Grafikak denentzat

--- a/app/Resources/translations/messages.eu.yml
+++ b/app/Resources/translations/messages.eu.yml
@@ -71,7 +71,7 @@ Kokalekua: Kokalekua
 'Zure gaurko arretak': 'Zure gaurko arretak'
 'Arretak guztira': 'Arretak guztira'
 'Gaurko arretak': 'Gaurko arretak'
-'HAZ/SAC gaur': '__HAZ/SAC gaur'
+'HAZ/SAC gaur': 'HAZ/SAC gaur'
 Arreta ezabatu: 'Arreta ezabatu'
 Arretako xehetasunak aldatu: 'Arretako xehetasunak aldatu'
 Ziur zaude?: 'Ziur zaude?'
